--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
     <title>Vue.js - Guia Completo</title>
     <script type="text/javascript" src="https://unpkg.com/vue"></script>
+    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
     <div id="app">
 
     </div>
-
-    <script type="text/javascript">
-        new Vue({
-            el: '#app'
-        });
-    </script>
 </body>
 </html>
