--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Vue.js - Guia Completo</title>
+    <title>Vue.js</title>
     <script type="text/javascript" src="https://unpkg.com/vue"></script>
-    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
     <div id="app">
 
     </div>
+
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
