--- a/04-Por-tras-da-instancia-Vue/index.html
+++ b/04-Por-tras-da-instancia-Vue/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
     <div id="app">
-        <h2 ref="myTitle"> {{ titulo }} </h2>
-        <button @click="alterarTitulo">Alterar titulo</button>
+        <h2 ref="myTitle"> {{ curso }} </h2>
     </div>
+
+    <div id="app2"></div>
 
     <script type="text/javascript" src="app.js"></script>
 </body>
