--- a/04-Por-tras-da-instancia-Vue/index.html
+++ b/04-Por-tras-da-instancia-Vue/index.html
@@ -5,8 +5,10 @@
     <script type="text/javascript" src="https://unpkg.com/vue"></script>
 </head>
 <body>
-    <div id="app">
-        <h2 ref="myTitle"> {{ curso }} </h2>
+    <div id="app1">
+        <h2> Instância 01 </h2>
+        <meu-component></meu-component>
+        <meu-component></meu-component>
     </div>
 
     <div id="app2"></div>
