--- a/04-Por-tras-da-instancia-Vue/index.html
+++ b/04-Por-tras-da-instancia-Vue/index.html
@@ -5,13 +5,11 @@
     <script type="text/javascript" src="https://unpkg.com/vue"></script>
 </head>
 <body>
-    <div id="app1">
-        <h2> Instância 01 </h2>
-        <meu-component></meu-component>
-        <meu-component></meu-component>
+    <div id="app">
+        <h2> {{ titulo }} </h2>
+        <button @click="alterarTitulo">Alterar título</button>
+        <button @click="destruindoInstancia">Destruindo instância</button>
     </div>
-
-    <div id="app2"></div>
 
     <script type="text/javascript" src="app.js"></script>
 </body>
