--- a/with-docker/code/vue-components-intro/public/index.html
+++ b/with-docker/code/vue-components-intro/public/index.html
@@ -11,10 +11,19 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app">
+
+    <div id="app1">
+      <h1>Instância 1</h1>
       <tcd-component></tcd-component>
       <tcd-component></tcd-component>
     </div>
+
+    <div id="app2">
+      <h1>Instância 2</h1>
+      <tcd-component></tcd-component>
+      <tcd-component></tcd-component>
+    </div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
