--- a/with-docker/code/vue-components-intro/public/index.html
+++ b/with-docker/code/vue-components-intro/public/index.html
@@ -12,17 +12,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
-    <div id="app1">
-      <h1>Instância 1</h1>
-      <tcd-component></tcd-component>
-      <tcd-component></tcd-component>
-    </div>
-    <hr>
-    <div id="app2">
-      <h1>Instância 2</h1>
-      <tcd-component></tcd-component>
-      <tcd-component></tcd-component>
-    </div>
+    <div id="app"></div>
 
     <!-- built files will be auto injected -->
   </body>
